<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:gravity="center"/>
    <Button
        android:id="@+id/play"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_button"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@android:color/transparent"/>
    <Button
        android:id="@+id/how"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_to_Play"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@android:color/transparent"/>

</LinearLayout>